Yugo states (WIP)

--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -804,7 +804,7 @@
  STATE_801:0 "Moesia"
  STATE_802:0 "Kosovo"
  STATE_803:0 "Southern Serbia"
- STATE_804:0 "Herzegovina"
+ STATE_804:0 "Herceg-Bosna"
  STATE_805:0 "Northern Epirus"
  STATE_806:0 "Pyrénées-Atlantiques"
  STATE_807:0 "Gdynia"
@@ -911,3 +911,10 @@
  STATE_908:0 "Afar"
  STATE_909:0 "Northern Moravia"
  STATE_910:0 "Southern Moravia"
+ STATE_911:0 "Slavonia"
+ STATE_912:0 "Baranja"
+ STATE_913:0 "Srjem"
+ STATE_914:0 "Kvarner"
+ STATE_916:0 "Eastern Srpska"
+ STATE_917:0 "Weastern Srpska"
+ STATE_918:0 "Weast Bosnia"
