--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -2952,16 +2952,16 @@
  SLV:0 "Slovenia"
  SLV_DEF:0 "Slovenia"
  SLV_ADJ:0 "Slovenian"
- BOS_fascism:1 "Bosnia-Herzegovinan Defensive Cooperative"
- BOS_fascism_DEF:1 "the Bosnia-Herzegovinan Defensive Cooperative"
+ BOS_fascism:1 "Bosnian Caliphate"
+ BOS_fascism_DEF:1 "The Bosnian Caliphate"
  BOS_ITA_fascism_subject:0 "Protectorate of Bosnia"
  BOS_ITA_fascism_subject_DEF:0 "the Protectorate of Bosnia"
- BOS_democratic:1 "Bosnia-Herzegovina"
- BOS_democratic_DEF:1 "Bosnia-Herzegovina"
+ BOS_democratic:1 "Federal Republic of Bosnia"
+ BOS_democratic_DEF:1 "The Federal Republic of Bosnia"
  BOS_neutrality:0 "Bosnia"
  BOS_neutrality_DEF:0 "Bosnia"
  BOS_communism:1 "Socialist Republic of Bosnia"
- BOS_communism_DEF:1 "the Socialist Republic of Bosnia"
+ BOS_communism_DEF:1 "The Socialist Republic of Bosnia"
  BOS_fascism_ADJ:0 "Bosnian"
  BOS_democratic_ADJ:0 "Bosnian"
  BOS_neutrality_ADJ:0 "Bosnian"
