--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -15,6 +15,22 @@
  MRA_DEF:0 "Moravia"
  MRA_ADJ:0 "Moravian"
  
+ RUT_fascism:0 "Ruthenian Empire"
+ RUT_fascism_DEF:0 "The Ruthenian Empire"
+ RUT_democratic:0 "Zakarpatian Republic"
+ RUT_democratic_DEF:0 "The Zakarpatian Republic"
+ RUT_neutrality:0 "Principality of Subcarpathia"
+ RUT_neutrality_DEF:0 "The Principality of Subcarpathia"
+ RUT_communism:0 "Soviet Socialist Republic of Zakarpatia"
+ RUT_communism_DEF:0 "The Soviet Socialist Republic of Zakarpatia"
+ RUT_fascism_ADJ:0 "Rusyin"
+ RUT_democratic_ADJ:0 "Rusyin"
+ RUT_neutrality_ADJ:0 "Rusyin"
+ RUT_communism_ADJ:0 "Rusyin"
+ RUT:0 "Zakarpatia"
+ RUT_DEF:0 "Zakarpatia"
+ RUT_ADJ:0 "Rusyin"
+ 
  GER_fascism:0 "German Reich"
  GER_fascism_DEF:0 "the German Reich"
  GER_democratic:0 "German Republic"
@@ -68,12 +84,12 @@
  SOV_democratic_DEF:0 "the Russian Federation"
  SOV_neutrality:0 "Russia"
  SOV_neutrality_DEF:0 "Russia"
- SOV_communism:0 "Soviet Union"
- SOV_communism_DEF:0 "the Soviet Union"
+ SOV_communism:0 "Russian Soviet Federated Socialist Republic"
+ SOV_communism_DEF:0 "The Russian Soviet Federated Socialist Republic"
  SOV_fascism_ADJ:0 "Russian"
  SOV_democratic_ADJ:0 "Russian"
  SOV_neutrality_ADJ:0 "Russian"
- SOV_communism_ADJ:0 "Soviet"
+ SOV_communism_ADJ:0 "Russian"
  SOV_autonomy_dominion:0 "Russian Dominion"
  SOV_autonomy_dominion_DEF:0 "the Russian Dominion"
  SOV_autonomy_colony:0 "$OVERLORDADJ$ Russia"
@@ -1388,10 +1404,10 @@
  SER_fascism_DEF:0 "the Serbian Empire"
  SER_ITA_fascism_subject:0 "Protectorate of Serbia"
  SER_ITA_fascism_subject_DEF:0 "the Protectorate of Serbia"
- SER_democratic:0 "Serbia"
- SER_democratic_DEF:0 "Serbia"
- SER_neutrality:0 "Serbia"
- SER_neutrality_DEF:0 "Serbia"
+ SER_democratic:0 "Republic of Serbia"
+ SER_democratic_DEF:0 "The Republic of Serbia"
+ SER_neutrality:0 "Kingdom of Serbia"
+ SER_neutrality_DEF:0 "The Kingdom of Serbia"
  SER_communism:0 "Socialist Republic of Serbia"
  SER_communism_DEF:0 "the Socialist Republic of Serbia"
  SER_fascism_ADJ:0 "Serbian"
