--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -918,3 +918,9 @@
  STATE_915:0 "Eastern Srpska"
  STATE_916:0 "Weastern Srpska"
  STATE_917:0 "Weast Bosnia"
+ STATE_918:0 "STATE_918"
+ STATE_919:0 "STATE_919"
+ STATE_920:0 "STATE_920"
+ STATE_921:0 "Lower Sorbia"
+ STATE_922:0 "Central Sorbia"
+ STATE_923:0 "Upper Sorbia"
