--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -12,7 +12,7 @@
  MRA_neutrality_ADJ:0 "Moravian"
  MRA_communism_ADJ:0 "Moravian"
  MRA:0 "Moravia"
- MRA_DEF:0 "Moravia"
+ MRA_DEF:0 "Moravian"
  MRA_ADJ:0 "Moravian"
  
  RUT_fascism:0 "Ruthenian Empire"
@@ -28,8 +28,24 @@
  RUT_neutrality_ADJ:0 "Rusyin"
  RUT_communism_ADJ:0 "Rusyin"
  RUT:0 "Zakarpatia"
- RUT_DEF:0 "Zakarpatia"
+ RUT_DEF:0 "Zakarpatian"
  RUT_ADJ:0 "Rusyin"
+ 
+ SOR_fascism:0 "State of Sorbia"
+ SOR_fascism_DEF:0 "The State of Sorbia"
+ SOR_democratic:0 "Sorbian Republic"
+ SOR_democratic_DEF:0 "The Sorbian Republic"
+ SOR_neutrality:0 "Duchy of Sorbia"
+ SOR_neutrality_DEF:0 "The Duchy of Sorbia"
+ SOR_communism:0 "Democratic Sorbian Republic"
+ SOR_communism_DEF:0 "The Democratic Sorbian Republic"
+ SOR_fascism_ADJ:0 "Sorbian"
+ SOR_democratic_ADJ:0 "Sorbian"
+ SOR_neutrality_ADJ:0 "Sorbian"
+ SOR_communism_ADJ:0 "Sorbian"
+ SOR:0 "Sorbia"
+ SOR_DEF:0 "Sorbian"
+ SOR_ADJ:0 "Sorbian"
  
  GER_fascism:0 "German Reich"
  GER_fascism_DEF:0 "the German Reich"
